# qt6-docker

./: .gitignore  README.md
6.10-android-aqt/: Dockerfile  get_android.sh  get_qt.sh
6.10-gcc-aqt/: Dockerfile  get_linuxdeploy.sh  get_qt.sh  install_packages.sh
6.2-android-aqt/: Dockerfile  get_android.sh  get_qt.sh
6.2-android-src/: Dockerfile  build_cmake.sh  build_qt.sh  get_android.sh
6.2-gcc-aqt/: Dockerfile  get_qt.sh  install_packages.sh
6.2-gcc-src/: Dockerfile  build_qt.sh
6.2-macos-aqt/: Dockerfile  get_qt.sh  install_packages.sh
6.2-mingw-aqt/: Dockerfile  get_qt.sh  install_packages.sh
6.2-wasm-aqt/: Dockerfile  get_emsdk.sh  get_qt.sh
6.3-android-aqt/: Dockerfile
6.3-gcc-aqt/: Dockerfile  get_qt.sh
6.3-macos-aqt/: Dockerfile  get_qt.sh
6.3-mingw-aqt/: Dockerfile
6.3-wasm-aqt/: Dockerfile
6.4-android-aqt/: Dockerfile
6.4-gcc-aqt/: Dockerfile  get_linuxdeploy.sh
6.4-macos-aqt/: Dockerfile
6.4-mingw-aqt/: Dockerfile
6.4-wasm-aqt/: Dockerfile
6.5-android-aqt/: Dockerfile  get_android.sh
6.5-gcc-aqt/: Dockerfile
6.5-macos-aqt/: Dockerfile  get_osxcross.sh
6.5-mingw-aqt/: Dockerfile
6.5-wasm-aqt/: Dockerfile  get_emsdk.sh
6.6-android-aqt/: Dockerfile
6.6-gcc-aqt/: Dockerfile
6.6-macos-aqt/: Dockerfile  get_qt.sh
6.6-mingw-aqt/: Dockerfile  get_qt.sh  install_packages.sh
6.6-wasm-aqt/: Dockerfile  get_qt.sh
6.7-android-aqt/: Dockerfile
6.7-gcc-aqt/: Dockerfile
6.7-macos-aqt/: Dockerfile  get_osxcross.sh  get_qt.sh
6.7-mingw-aqt/: Dockerfile
6.8-android-aqt/: Dockerfile  get_qt.sh
6.8-gcc-aqt/: Dockerfile  get_linuxdeploy.sh  get_qt.sh
6.8-macos-aqt/: Dockerfile  get_osxcross.sh  get_qt.sh
6.8-mingw-aqt/: Dockerfile  get_qt.sh
6.8-wasm-aqt/: Dockerfile  get_qt.sh  quiki.conf
test/: test.sh
test/sample_projects/qt_console/: CMakeLists.txt  main.cpp
test/sample_projects/qt_quick/: CMakeLists.txt  main.cpp
test/sample_projects/qt_widgets/: CMakeLists.txt  main.cpp  qt_widgets_ru_RU.ts
